--- a/_posts/2017-07-27-test.md
+++ b/_posts/2017-07-27-test.md
@@ -1,22 +1,19 @@
 ---
-title: "Test post 1"
+title: "Building a neural network from scratch"
 categories:
-  - data science
+  - Data Science, Deep learning
 tags:
-  - nlp
-  - r
+  - Deep learning
+  - Neural Networks
   - python
-  - big data
 ---
 
-This is a test post
+### Ordered -- Unordered -- Ordered
 
 
 * I am a list 1
 * I am a list 2
 * Is disqus appearing??
-
-### Ordered -- Unordered -- Ordered
 
 1. ordered item
 2. ordered item 
