--- a/_posts/2017-07-27-test.md
+++ b/_posts/2017-07-27-test.md
@@ -8,18 +8,27 @@ tags:
   - python
 ---
 
-### Ordered -- Unordered -- Ordered
+### Code your neural network today in python from scratch
 
 
-* I am a list 1
-* I am a list 2
-* Is disqus appearing??
 
-1. ordered item
-2. ordered item 
-  * **unordered**
-  * **unordered** 
-    1. ordered item
-    2. ordered item
-3. ordered item
-4. ordered item
+<pre>
+# Coding the forward propagation algorithm
+input_data = np.array([3,5])
+weights = {'node_0': np.array([2, 4]), 'node_1': np.array([ 4, -5]), 'output': np.array([2, 7])}
+
+# Calculate node 0 value: node_0_value
+node_0_value = (input_data * weights['node_0']).sum()
+
+# Calculate node 1 value: node_1_value
+node_1_value = node_1_value = (input_data * weights['node_1']).sum()
+
+# Put node values into array: hidden_layer_outputs
+hidden_layer_outputs = np.array([node_0_value, node_1_value])
+
+# Calculate output: output
+output = (hidden_layer_outputs * weights['output']).sum()
+
+# Print output
+print(output)
+</pre>
