--- a/_posts/2017-07-27-test.md
+++ b/_posts/2017-07-27-test.md
@@ -10,9 +10,7 @@ tags:
 
 ### Code your neural network today in python from scratch
 
-
-
-<pre>
+{% highlight python linenos %}
 # Coding the forward propagation algorithm
 input_data = np.array([3,5])
 weights = {'node_0': np.array([2, 4]), 'node_1': np.array([ 4, -5]), 'output': np.array([2, 7])}
@@ -31,4 +29,36 @@ output = (hidden_layer_outputs * weights['output']).sum()
 
 # Print output
 print(output)
-</pre>
+
+# The Rectified Linear Activation Function
+#  an "activation function" is a function applied at each node. It converts the node's input into some output.
+def relu(input):
+    '''Define your relu activation function here'''
+    # Calculate the value for the output of the relu function: output
+    output = max(input, 0)
+    
+    # Return the value just calculated
+    return(output)
+
+# Calculate node 0 value: node_0_output
+node_0_input = (input_data * weights['node_0']).sum()
+node_0_output = relu(node_0_input)
+
+# Calculate node 1 value: node_1_output
+node_1_input = (input_data * weights['node_1']).sum()
+node_1_output = relu(node_1_input)
+
+# Put node values into array: hidden_layer_outputs
+hidden_layer_outputs = np.array([node_0_output, node_1_output])
+
+# Calculate model output (do not apply relu)
+model_output = (hidden_layer_outputs * weights['output']).sum()
+
+# Print model output
+print(model_output)
+
+# You predicted 52 transactions. Without this activation function, you would have predicted a negative number! The real power of activation functions will come soon when you start tuning model weights.
+{% endhighlight %}
+
+
+
